web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - targetPort: 8080
    port: 8080
  selector:
    app: web
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
