basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: flask
          servicePort: 8080
      - path: /web/*
        backend:
          serviceName: web
          servicePort: 8080
